# mem0-platform-sidecar

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: publish-ghcr-images.yml
.superpowers/sdd/: continuous-review-1-rereview-2-fix-report.md  continuous-review-1-rereview-3-fix-report.md  continuous-review-1-rereview-4-fix-report.md  continuous-review-1-rereview-fix-report.md  final-review-fix-report.md  phase2-final-fix-report.md  progress.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-9-report.md
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.e2e.yml
docs/: consolidation.md  design.md  development.md  e2e.md
integrations/mem0-dashboard-overlay/: README.md  manifest.json
migrations/: env.py
migrations/versions/: 0001_control_plane_core.py  0002_export_jobs.py  0003_category_name_uniqueness.py  0004_memory_explorer_indexes.py  0005_request_trace_fields.py  0006_entity_projection_scope.py  0007_mutation_intents.py  0008_memory_consolidation.py
scripts/: run_live_e2e_compose.py  run_postgres_migration_smoke.py
src/mem0_sidecar/: config.py  management_cli.py  observability.py
tests/: conftest.py  test_config.py  test_consolidation_admin_cli.py  test_dashboard_overlay_scripts.py  test_e2e_compose_harness.py  test_mutation_admin_cli.py  test_package.py  test_publish_workflow.py
tests/core/: test_categories.py  test_consolidation_analysis.py  test_consolidation_policy.py  test_consolidation_service.py  test_dashboard_categories.py  (+9 more)
(+117 files in other folders)
